--- a/PhishingAnalysis.ipynb
+++ b/PhishingAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": null,
    "id": "6517eca0-290c-47cb-a898-860cb08dca94",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "\n",
-    "# Read in the data from the CSV file\n",
+    "# Read in the data from the CSV file check check\n",
     "df = pd.read_csv('phishing_dataset.csv')\n",
     "pd.set_option('display.max_columns', None)\n",
     "\n",
